@@ -88,6 +88,8 @@ void set_autopar_ok_status(int incr=1);
 #define GETFILES_MARK			1024
 #define GETFILES_UNMARK			2048
 
+#define GETFILES_AUTOPAR_DISABLING_FLAGS (GETFILES_NOAUTOPAR|GETFILES_TESTMODE|GETFILES_MARK|GETFILES_UNMARK|GETFILES_NODECODE)
+
 enum t_show_multiserver {
 	NO_SHOW_MULTI,
 	SHOW_MULTI_LONG,
